[package]
name = "ez_invoice_rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ez_invoice"
path = "src/lib.rs"

[[bin]]
name = "ez_invoice_tests"
path = "src/bin.rs"

[dependencies]
yew = {version = "0.20.0", features = ["ssr"]}
schemafy = "0.6.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
async-std = "1.12.0"
chromiumoxide = "0.4.0"
futures = "0.3.25"
base64 = "0.21.0"
rocket = {version = "0.5.0-rc.2", features=["json"]}
tokio = "1.24.2"
once_cell = "1.17.0"
figment = "0.10.8"


