[package]
name = "ez_invoice_rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ez_invoice"
path = "src/lib.rs"

[[bin]]
name = "ez_invoice_tests"
path = "src/bin.rs"

[dependencies]
yew = { version = "0.20.0", features = ["ssr"] }
schemafy = "0.6.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-std = "*"
chromiumoxide = "*"
futures = "*"
base64 = "0.21.0"
rocket = { version = "0.5.1", features = ["json"] }
tokio = "*"
once_cell = "*"
figment = "*"
