[package]
name = "invoice_template"
version = "0.1.0"
edition = "2021"
description = "A PDF invoice generator made with Yew"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20.0", features = ["csr", "ssr"]}
schemafy = "0.6.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
stylist = { version = "0.12.0", features = ["yew"] }

